--- a/source/NoMorePanicSave/NoMorePanicSave.csproj
+++ b/source/NoMorePanicSave/NoMorePanicSave.csproj
@@ -52,7 +52,9 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="LoggerExtensionMethods.cs" />
     <Compile Include="NoMorePanicSavePackage.cs" />
+    <Compile Include="NullLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WindowsEventHooker.cs" />
   </ItemGroup>
