Use new API for focus event handling

--- a/source/NoMorePanicSave/NoMorePanicSave.csproj
+++ b/source/NoMorePanicSave/NoMorePanicSave.csproj
@@ -56,7 +56,6 @@
     <Compile Include="NoMorePanicSavePackage.cs" />
     <Compile Include="NullLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WindowsEventHooker.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="LICENSE">
@@ -158,6 +157,7 @@
       <HintPath>..\packages\Microsoft.VisualStudio.Validation.15.0.82\lib\net45\Microsoft.VisualStudio.Validation.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="stdole, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
